<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_desc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">



    <Button
        android:layout_marginTop="100dp"
        android:id="@+id/readbtn"
        android:background="@drawable/searchbtn_bg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/readThisManga"
        android:textColor="@color/colorWhite"
        android:layout_gravity="top|end"
        android:layout_margin="10dp"
        app:layout_behavior=".noname.HideBtnOnScroll"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_desc"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:theme="@style/ToolBarBetter">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlbr_desc"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:title="Ждем..."
            app:expandedTitleMarginBottom="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.Inverse"
            app:contentScrim="@color/BlackWithOpacity">

            <include
                layout="@layout/item_progress_bar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"/>


            <ImageView
                android:id="@+id/title_img_full"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:tint="@color/cardview_shadow_start_color"
                android:scaleType="centerCrop"
                tools:ignore="PrivateResource" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tlbr_desc"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                style="@style/ToolBarWithNavigationBack" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mangainfo"
                        android:textAppearance="@style/TextAppearance.Header"
                        style="@style/TextComponent.ItemRow" />

                    <TextView
                        android:id="@+id/item_desc_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:lineSpacingExtra="8dp"
                        android:textSize="16sp"
                        android:text="@string/loading" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descTitle"
                        android:textAppearance="@style/TextAppearance.Header"
                        style="@style/TextComponent.ItemRow" />

                    <TextView
                        android:id="@+id/description_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:lineSpacingExtra="8dp"
                        android:textSize="16sp"
                        android:text="@string/loading" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>